--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
   font-size: 62.5%;
@@ -24,12 +25,16 @@ nav {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  z-index: 1;
   background-color: #5E2D79;
+  border: 2px solid black;
   color: #FFFFFF;
   padding: 3rem;
 }
-nav h3 {
-  font-size: 3.2rem;
+nav .logo {
+  width: 8.2rem;
+  height: 5.2rem;
 }
 nav ul {
   width: 25vw;
@@ -75,4 +80,174 @@ section p {
   font-size: 2.4rem;
   font-weight: 300;
   text-align: center;
+}
+
+.cards {
+  width: 100%;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(rgba(94, 45, 121, 0.7), rgba(94, 45, 121, 0.7)), url(../assets/mulher.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 60%;
+  background-position: top;
+}
+.cards h2 {
+  font-size: 4.8rem;
+  font-weight: 700;
+  color: #FFFFFF;
+}
+.cards .card__container {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 6rem;
+}
+.cards .card__container .card {
+  width: 35.6rem;
+  height: 26.8rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: left;
+  background-color: #FFFFFF;
+  padding: 2rem;
+  border-radius: 1.8rem;
+  box-shadow: 0px 9px 9px 0px rgba(107, 69, 115, 0.1019607843);
+}
+.cards .card__container .card .card__titulo {
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 2.4rem;
+  font-weight: 600;
+  color: #5E2D79;
+}
+.cards .card__container .card .card__titulo img {
+  width: 3.2rem;
+  height: 3.2rem;
+}
+.cards .card__container .card p {
+  font-size: 1.8rem;
+}
+.cards .card__container .card a {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #5E2D79;
+  margin-top: 2rem;
+}
+
+.help {
+  width: 100%;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.help h4 {
+  font-size: 3.6rem;
+  font-weight: 600;
+  color: #1F2937;
+  margin-bottom: 2rem;
+}
+.help .paragrafo__cima {
+  width: 55vw;
+  font-size: 2rem;
+  font-weight: 400;
+  text-align: center;
+}
+.help .help__container {
+  width: 100%;
+  height: 60vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.help .help__container .secao {
+  width: 58.5rem;
+  height: 30rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: left;
+  background-color: #FFFFFF;
+  padding: 2rem;
+  border-radius: 1.8rem;
+  box-shadow: 0px 9px 9px 0px rgba(107, 69, 115, 0.1019607843);
+}
+.help .help__container .secao .secao__titulo {
+  width: 85%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1.5rem;
+  font-size: 2.4rem;
+  font-weight: 600;
+  color: #5E2D79;
+}
+.help .help__container .secao .secao__titulo img {
+  width: 3.2rem;
+  height: 3.2rem;
+}
+.help .help__container .secao .paragrafo__baixo {
+  font-size: 1.8rem;
+}
+.help .help__container .secao ul {
+  font-size: 1.8rem;
+  padding: 2rem;
+}
+
+footer {
+  width: 100%;
+  height: 20vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #FFFFFF;
+  background-color: #5E2D79;
+  padding-top: 2rem;
+}
+footer .footer__container {
+  width: 80%;
+  height: 15vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 3rem;
+}
+footer .footer__container div {
+  width: 40%;
+  height: 15vh;
+  padding: 0 2rem;
+}
+footer .footer__container div h5 {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 2rem;
+}
+footer .footer__container div ul {
+  padding-left: 2rem;
+  font-size: 1.5rem;
+}
+footer .footer__container div ul li span {
+  font-weight: 600;
+}
+footer .footer__container div .alunos {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px; /* Espaçamento opcional entre os itens */
+}
+footer .footer__container div .alunos li {
+  flex: 1 1 calc(33.33% - 10px); /* Define 1/3 da largura da UL, considerando o gap */
+  max-width: calc(33.33% - 10px); /* Garante que não ultrapasse o limite */
 }/*# sourceMappingURL=style.css.map */
