--- a/styles.css/style.scss
+++ b/styles.css/style.scss
@@ -25,12 +25,16 @@ nav {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    z-index: 1;
     background-color: #5E2D79;
+    border: 2px solid black;
     color: #FFFFFF;
     padding: 3rem;
 
-    h3 {
-        font-size: 3.2rem;
+    .logo {
+        width: 8.2rem;
+        height: 5.2rem;
     }
 
     ul {
@@ -82,5 +86,200 @@ section {
         font-size: 2.4rem;
         font-weight: 300;
         text-align: center;
+    }
+}
+
+.cards {
+    width: 100%;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(rgba(94, 45, 121, 0.7), rgba(94, 45, 121, 0.7)), url(../assets/mulher.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 60%;
+    background-position: top;
+
+    h2 {
+        font-size: 4.8rem;
+        font-weight: 700;
+        color: #FFFFFF;
+    }
+
+    .card__container {
+        width: 90%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-top: 6rem;
+    
+        .card {
+            width: 35.6rem;
+            height: 26.8rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: left;
+            background-color: #FFFFFF;
+            padding: 2rem;
+            border-radius: 1.8rem;
+            box-shadow: 0px 9px 9px 0px #6B45731A;
+
+            .card__titulo {
+                width: 70%;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-evenly;
+                align-items: center;
+                font-size: 2.4rem;
+                font-weight: 600;
+                color: #5E2D79;
+
+                img {
+                    width: 3.2rem;
+                    height: 3.2rem;
+                }
+            }
+
+            p {
+                font-size: 1.8rem;
+            }
+
+            a {
+                font-size: 2rem;
+                font-weight: 600;
+                color: #5E2D79;
+                margin-top: 2rem;
+            }
+        }
+    }
+}
+
+.help {
+    width: 100%;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h4 {
+        font-size: 3.6rem;
+        font-weight: 600;
+        color: #1F2937;
+        margin-bottom: 2rem;
+    }
+
+    .paragrafo__cima {
+        width: 55vw;
+        font-size: 2rem;
+        font-weight: 400;
+        text-align: center;
+    }
+
+    .help__container {
+        width: 100%;
+        height: 60vh;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+
+        .secao {
+            width: 58.5rem;
+            height: 30rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: left;
+            background-color: #FFFFFF;
+            padding: 2rem;
+            border-radius: 1.8rem;
+            box-shadow: 0px 9px 9px 0px #6B45731A;
+
+            .secao__titulo {
+                width: 85%;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                gap: 1.5rem;
+                font-size: 2.4rem;
+                font-weight: 600;
+                color: #5E2D79;
+
+                img {
+                    width: 3.2rem;
+                    height: 3.2rem;
+                }
+            }
+
+            .paragrafo__baixo {
+                font-size: 1.8rem;
+            }
+
+            ul {
+                font-size: 1.8rem;
+                padding: 2rem;
+            }
+        }
+    }
+}
+
+footer {
+    width: 100%;
+    height: 20vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+    background-color: #5E2D79;
+    padding-top: 2rem;
+
+    .footer__container {
+        width: 80%;
+        height: 15vh;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-bottom: 3rem;
+
+        div {
+            width: 40%;
+            height: 15vh;
+            padding: 0 2rem;
+
+            h5 {
+                font-size: 2rem;
+                font-weight: 700;
+                margin-bottom: 2rem;
+            }
+
+            ul {
+                padding-left: 2rem;
+                font-size: 1.5rem;
+
+                li {
+
+                    span {
+                        font-weight: 600;
+                    }
+                }
+            }
+
+            .alunos {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 10px; /* Espaçamento opcional entre os itens */
+
+                li {
+                    flex: 1 1 calc(33.33% - 10px); /* Define 1/3 da largura da UL, considerando o gap */
+                    max-width: calc(33.33% - 10px); /* Garante que não ultrapasse o limite */
+                }
+            }
+        }
     }
 }
