--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 :root {
   font-size: 62.5%;
 }
@@ -251,3 +251,81 @@ footer .footer__container div .alunos li {
   flex: 1 1 calc(33.33% - 10px); /* Define 1/3 da largura da UL, considerando o gap */
   max-width: calc(33.33% - 10px); /* Garante que não ultrapasse o limite */
 }/*# sourceMappingURL=style.css.map */
+
+/* css modals: */
+
+.modal {
+  display: none; 
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); 
+  backdrop-filter: blur(5px); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.conteudo-modal {
+  position: relative;
+  background: white; 
+  padding: 1.5%;
+  height: 75vh;
+  width: 50vw;
+  border-radius: 10px;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  color: #6A6A6A;
+  box-sizing: border-box;
+}
+
+.fechar-modal {
+  position: absolute;
+  top: 90%;
+  left: 85%;
+  height: 5vh;
+  width: 5vw;
+  background: #000000;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+
+.fechar-modal:hover {
+  background: #5E2D79;
+}
+
+.titulo-modal{
+  color: #5E2D79;
+  font-size: 3rem;
+}
+
+.texto-resumo-modal{
+  margin: 5px 0 5px 0;
+  font-size: 1.5rem;
+}
+
+.titulo-lista-modal{
+  color: #5E2D79;
+  font-size: 2rem;
+}
+
+.lista-modal{
+  list-style: none;
+}
+
+.item-lista-modal{
+  font-size: 1.5rem;
+  margin: 10px 0 10px 0;
+}
+
+.texto-modal{
+  margin-top: 2%;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
