--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -329,3 +329,33 @@ footer .footer__container div .alunos li {
   font-size: 1.5rem;
   font-weight: 700;
 }
+
+@media (max-width: 768px) {
+  body {
+    background-color: lightgray;
+  }
+  .container {
+    flex-direction: column;
+  }
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.container {
+  width: 90%;
+  max-width: 1200px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
