--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
   font-size: 62.5%;
 }
@@ -32,9 +32,9 @@ nav {
   color: #FFFFFF;
   padding: 3rem;
 }
-nav .logo {
-  width: 8.2rem;
-  height: 5.2rem;
+nav a .logo {
+  width: 15.2rem;
+  height: 9.2rem;
 }
 nav ul {
   width: 25vw;
@@ -120,11 +120,12 @@ section p {
   box-shadow: 0px 9px 9px 0px rgba(107, 69, 115, 0.1019607843);
 }
 .cards .card__container .card .card__titulo {
-  width: 70%;
+  width: 90%;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: left;
   align-items: center;
+  gap: 1rem;
   font-size: 2.4rem;
   font-weight: 600;
   color: #5E2D79;
@@ -136,11 +137,15 @@ section p {
 .cards .card__container .card p {
   font-size: 1.8rem;
 }
-.cards .card__container .card a {
+.cards .card__container .card .card__link {
+  width: 50%;
+}
+.cards .card__container .card .card__link a {
   font-size: 2rem;
   font-weight: 600;
   color: #5E2D79;
   margin-top: 2rem;
+  margin-right: 0.5rem;
 }
 
 .help {
@@ -251,135 +256,3 @@ footer .footer__container div .alunos li {
   flex: 1 1 calc(33.33% - 10px); /* Define 1/3 da largura da UL, considerando o gap */
   max-width: calc(33.33% - 10px); /* Garante que não ultrapasse o limite */
 }/*# sourceMappingURL=style.css.map */
-
-/* css modals: */
-
-.modal {
-  display: none; 
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5); 
-  backdrop-filter: blur(5px); 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-}
-
-.conteudo-modal {
-  position: relative;
-  background: white; 
-  padding: 1.5%;
-  height: 75vh;
-  width: 50vw;
-  border-radius: 10px;
-  font-family: "Inter", sans-serif;
-  font-weight: 500;
-  color: #6A6A6A;
-  box-sizing: border-box;
-}
-
-.fechar-modal {
-  position: absolute;
-  top: 90%;
-  left: 85%;
-  height: 5vh;
-  width: 5vw;
-  background: #000000;
-  color: white;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  font-size: 1.5rem;
-}
-
-.fechar-modal:hover {
-  background: #5E2D79;
-}
-
-.titulo-modal{
-  color: #5E2D79;
-  font-size: 3rem;
-}
-
-.texto-resumo-modal{
-  margin: 5px 0 5px 0;
-  font-size: 1.5rem;
-}
-
-.titulo-lista-modal{
-  color: #5E2D79;
-  font-size: 2rem;
-}
-
-.lista-modal{
-  list-style: none;
-}
-
-.item-lista-modal{
-  font-size: 1.5rem;
-  margin: 10px 0 10px 0;
-}
-
-.texto-modal{
-  margin-top: 2%;
-  font-size: 1.5rem;
-  font-weight: 700;
-}
-
-.conteudo {
-  text-align: center;
-  width: 90%;
-
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-
-  gap: 16px;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 10px;
-  margin-top: 20px;
-}
-
-.grid-item {
-  height: 100px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-weight: bold;
-}
-
-.vermelha {background-color: brown;}
-.verde {background-color: darkgreen;}
-.azul  {background-color: blue;}
-.amarela {background-color: darkkhaki;}
-
-
-@media (min-widht: 768px) {
-  .conteudo {
-    width: 70%;
-  }
-  
-  .grid-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (min-widht: 1024px) {
-  .conteudo {
-    width: 50%;
-  }
-  
-  .grid-container {
-    grid-template-columns: repeat(5, 1fr);
-  }
-}
