--- a/styles.css/style.scss
+++ b/styles.css/style.scss
@@ -32,10 +32,12 @@ nav {
     color: #FFFFFF;
     padding: 3rem;
 
+   a {
     .logo {
-        width: 8.2rem;
-        height: 5.2rem;
+        width: 15.2rem;
+        height: 9.2rem;
     }
+   }
 
     ul {
         width: 25vw;
@@ -128,11 +130,12 @@ section {
             box-shadow: 0px 9px 9px 0px #6B45731A;
 
             .card__titulo {
-                width: 70%;
+                width: 90%;
                 display: flex;
                 flex-direction: row;
-                justify-content: space-evenly;
+                justify-content: left;
                 align-items: center;
+                gap: 1rem;
                 font-size: 2.4rem;
                 font-weight: 600;
                 color: #5E2D79;
@@ -147,12 +150,18 @@ section {
                 font-size: 1.8rem;
             }
 
-            a {
-                font-size: 2rem;
-                font-weight: 600;
-                color: #5E2D79;
-                margin-top: 2rem;
+           .card__link {
+            width: 50%;
+
+                a {
+                    font-size: 2rem;
+                    font-weight: 600;
+                    color: #5E2D79;
+                    margin-top: 2rem;
+                    margin-right: 0.5rem;
+                }
             }
+           
         }
     }
 }
