--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -257,18 +257,36 @@ footer .footer__container div .alunos li {
   max-width: calc(33.33% - 10px); /* Garante que não ultrapasse o limite */
 }/*# sourceMappingURL=style.css.map */
 
-@media screen and (max-width: 1020px) {
-  /* CLASSES GERAIS */
-  .card__container,.card__link {
-    flex-direction: column;
+/* Responsividade */
+@media (max-width: 768px) {
+  nav ul {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 60px;
+      right: 20px;
+      background: #b71c1c;
+      width: 200px;
+      text-align: center;
+      padding: 10px;
+      border-radius: 5px;
   }
 
-  /* CABEÇALHO */
-  .help__container, .secao__titulo {
-    padding: 20px 8%;
+  nav ul.show {
+      display: flex;
   }
 
-  .card__titulo {
-    font-size: 30px;
+  .menu-toggle {
+      display: block;
+  }
+
+  .card__container {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .footer__container {
+      flex-direction: column;
+      text-align: center;
   }
 }
