--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -259,44 +259,44 @@ footer .footer__container div .alunos li {
 
 /* Responsivos */
 
-@media (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   nav {
       flex-direction: column;
       height: auto;
-      padding: 2rem;
+      padding: 10rem;
   }
   nav ul {
       width: 100%;
       flex-direction: column;
       align-items: center;
-      gap: 1.5rem;
+      gap: 3rem;
   }
   nav ul li {
-      width: 100%;
+      width: 80%;
       text-align: center;
   }
   section p {
-      width: 80%;
-      font-size: 1.8rem;
+      width: 70%;
+      font-size: 4rem;
   }
   .cards .card__container {
       flex-wrap: wrap;
-      gap: 2rem;
+      gap: 5rem;
       justify-content: center;
   }
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   nav a .logo {
       width: 10rem;
       height: auto;
   }
   section h1 {
-      font-size: 3.2rem;
+      font-size: 4rem;
       text-align: center;
   }
   section p {
-      font-size: 1.8rem;
+      font-size: 2rem;
       width: 85%;
       text-align: center;
   }
@@ -305,46 +305,46 @@ footer .footer__container div .alunos li {
       align-items: center;
   }
   .cards .card__container .card {
-      width: 90%;
+      width: 70%;
   }
   .help .help__container {
       flex-direction: column;
       align-items: center;
-      gap: 1.5rem;
+      gap: 2rem;
   }
   .help .help__container .secao {
-      width: 90%;
+      width: 80%;
   }
 }
 
-@media (max-width: 480px) {
+@media screen and (max-width: 480px) {
   nav {
-      padding: 1rem;
+      padding: 5rem;
   }
   nav ul {
       flex-direction: column;
-      gap: 1rem;
+      gap: 6rem;
   }
   section h1 {
-      font-size: 2.8rem;
+      font-size: 4rem;
       text-align: center;
   }
   section p {
-      font-size: 1.6rem;
-      width: 95%;
+      font-size: 3rem;
+      width: 70%;
       text-align: center;
   }
   .cards .card__container .card {
-      width: 100%;
+      width: 80%;
       padding: 1.5rem;
   }
   .help .help__container .secao {
-      width: 100%;
+      width: 80%;
       padding: 1.5rem;
   }
   footer .footer__container {
       flex-direction: column;
       text-align: center;
-      gap: 1rem;
+      gap: 4rem;
   }
 }
