--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -212,50 +212,59 @@ section p {
 
 footer {
   width: 100%;
-  height: 20vh;
+  min-height: 150px; 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   color: #FFFFFF;
   background-color: #5E2D79;
-  padding-top: 2rem;
+  padding: 2rem 1rem; 
 }
+
 footer .footer__container {
-  width: 80%;
-  height: 15vh;
+  width: 90%; 
+  max-width: 1200px;
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap; 
   justify-content: space-evenly;
-  align-items: center;
-  margin-bottom: 3rem;
+  align-items: flex-start;
+  margin-bottom: 2rem; 
+  gap: 2rem; 
 }
+
 footer .footer__container div {
-  width: 40%;
-  height: 15vh;
-  padding: 0 2rem;
+  width: calc(50% - 2rem); 
+  min-width: 250px; 
+  padding: 1rem;
 }
+
 footer .footer__container div h5 {
-  font-size: 2rem;
+  font-size: 1.8rem; 
   font-weight: 700;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem; 
 }
+
 footer .footer__container div ul {
-  padding-left: 2rem;
-  font-size: 1.5rem;
+  padding-left: 1.5rem;
+  font-size: 1.4rem;
 }
+
 footer .footer__container div ul li span {
   font-weight: 600;
 }
+
 footer .footer__container div .alunos {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px; /* Espaçamento opcional entre os itens */
+  gap: 5px; 
 }
+
 footer .footer__container div .alunos li {
-  flex: 1 1 calc(33.33% - 10px); /* Define 1/3 da largura da UL, considerando o gap */
-  max-width: calc(33.33% - 10px); /* Garante que não ultrapasse o limite */
-}/*# sourceMappingURL=style.css.map */
+  flex: 1 1 calc(33.33% - 5px);
+  max-width: calc(33.33% - 5px);
+  font-size: 1.3rem; 
+}
 
 /* Responsivos */
 
@@ -293,13 +302,13 @@ footer .footer__container div .alunos li {
 
   .help {
     width: 100%;
-    min-height: 60vh;
+    height: auto; 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 2rem;
+    padding: 1.5rem; 
   }
 
 }
@@ -350,14 +359,14 @@ footer .footer__container div .alunos li {
 
   .help {
     width: 100%;
-    min-height: 60vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 2rem;
-  }
+    padding: 1rem;
+}
 
 }
 
@@ -393,12 +402,12 @@ section p {
 }
 .help .help__container .secao {
     width: 100%;
-    padding: 2rem;
+    padding: 1.5rem;
 }
 footer .footer__container {
     flex-direction: column;
     text-align: center;
-    gap: 4rem;
+    gap: 2rem;
 }
 
 .icons {
@@ -408,13 +417,13 @@ footer .footer__container {
 
 .help {
   width: 100%;
-  min-height: 60vh;
+  height: auto; 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding: 2rem;
+  padding: 0.8rem; 
 }
   
   
