--- a/scss/style.scss
+++ b/scss/style.scss
@@ -105,11 +105,10 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #5E2D79;
-    /*background: linear-gradient(rgba(94, 45, 121, 0.7), rgba(94, 45, 121, 0.7)), url(../assets/mulher.jpg);
-    background-repeat: repeat;
+    background: linear-gradient(rgba(94, 45, 121, 1), rgba(94, 45, 121, 1)), url(../assets/mulher.jpg);
+    background-repeat: no-repeat;
     background-size: 100% 60%;
-    background-position: top; */ 
+    background-position: top;
 
     h2 {
         font-size: 4.8rem;
